WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273318
[WebRTC][GStreamer] Missing media in SDP if setConfiguration() is called after createDataChannel() or addTransceiver()
https://bugs.webkit.org/show_bug.cgi?id=273318
Summary
[WebRTC][GStreamer] Missing media in SDP if setConfiguration() is called afte...
Carlos Bentzen
Reported
2024-04-26 07:01:16 PDT
In the script below: const pc = new RTCPeerConnection(); pc.createDataChannel("data-channel") pc.setConfiguration({}); await pc.setLocalDescription(); const sdp = pc.localDescription.sdp; sdp should contain a line like "m=application 9 UDP/DTLS/SCTP webrtc-datachannel", but with the GstWebRTC backend that's not true. The line is back in the SDP if pc.setConfiguration({}) is removed.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Bentzen
Comment 1
2024-04-26 07:06:14 PDT
(patch incoming soon)
Carlos Bentzen
Comment 2
2024-04-26 08:05:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27802
EWS
Comment 3
2024-04-29 01:54:21 PDT
Committed
278099@main
(1bc81c31ff6c): <
https://commits.webkit.org/278099@main
> Reviewed commits have been landed. Closing PR #27802 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-04-29 01:55:16 PDT
<
rdar://problem/127220767
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug